@@ -12,16 +12,29 @@
 # This is a helper make script to build libgpg-error for WindowsCE
 # using the Microsoft Visual C compiler.  
 
-# The target build directry where we run the Visual C compiler/
-# This needs to be an absolute directory name.
-targetdir = /home/smb/xppro-gnu/src/libassuan
+# The target build directory where we run the Visual C compiler/ This
+# needs to be an absolute directory name.  Further we expect this
+# structure of the tree:
+# 
+#   TARGET/src - Source directories:  One directory for each project
+#         /bin - Installed DLLs
+#         /lib - Installed import libs.
+#         /include - Instaled header files.
 
+targetdir = /home/smb/xppro-gnu
+targetsrc = $(targetdir)/src
+
+# Install directories (relative)
+bindir = ../../../bin
+libdir = ../../../lib
+incdir = ../../../include
 
 help:
 	@echo "Run "
 	@echo "  make -f ../contrib/conf-w32ce-msc/build.mk copy-source"
 	@echo "on the POSIX system and then"
 	@echo "  nmake -f build.mk all"
+	@echo "  nmake -f build.mk install"
 	@echo "on the Windows system"
 
 ce_defines = -DWINCE -D_WIN32_WCE=0x502 -DUNDER_CE \
@@ -29,21 +42,10 @@ ce_defines = -DWINCE -D_WIN32_WCE=0x502 -DUNDER_CE \
              -D_CONSOLE -DARM -D_ARM_
 #-D_DEBUG -DDEBUG 
 
-# Some options of Visual-C:
-# -W3   Set warning level 3
-# -Zi   Generate debug info
-# -Od   Disable optimization
-# -Gm   Enable minimal rebuild (for C++)
-# -EHsc Exception handling model sc 
-# -MTd  Create a debug multithreaded executable
-# -fp:  Floating point behaviour
-# -GR-  Disable runtime type information
-# -Os   Favor small code
-# -LD   Create a DLL
-# -Fe   Set executable output name (may be only a directory)
+# See libgpg-error's build-mk for a list of compiler options.
 CFLAGS = -nologo -W3 -fp:fast -Os $(ce_defines) \
          -DHAVE_CONFIG_H -DDLL_EXPORT -D_CRT_SECURE_NO_WARNINGS \
-	 -I. -I../../libgpg-error/src -I../../libgpg-error/src/gpg-extra
+	 -I. -I$(incdir) -I$(incdir)/gpg-extra
 
 LDFLAGS =
 
@@ -125,8 +127,9 @@ copy-static-source:
            echo "Please cd to the src/ directory first"; \
 	   exit 1; \
         fi
-	cp -t $(targetdir) $(sources);
-	cd ../contrib/conf-w32ce-msc ; cp -t $(targetdir) $(conf_sources)
+	cp -t $(targetsrc)/libassuan/src $(sources);
+	cd ../contrib/conf-w32ce-msc ; \
+           cp -t $(targetsrc)/libassuan/src $(conf_sources)
 
 
 copy-built-source:
@@ -134,7 +137,7 @@ copy-built-source:
            echo "Please build using ./autogen.sh --build-w32ce first"; \
 	   exit 1; \
         fi
-	cp -t $(targetdir) $(built_sources)
+	cp -t $(targetsrc)/libassuan/src $(built_sources)
 
 copy-source: copy-static-source copy-built-source
 
@@ -147,12 +150,14 @@ all:  $(sources) $(conf_sources) $(built_sources) $(objs)
                 /OUT:libassuan-0-msc.dll \
 		/DEF:libassuan.def /NOLOGO /MANIFEST:NO \
 		/NODEFAULTLIB:"oldnames.lib" /DYNAMICBASE:NO \
-	        $(objs) \
+	        $(objs) $(libdir)/libgpg-error-0-msc.lib \
 		coredll.lib corelibc.lib ole32.lib oleaut32.lib uuid.lib \
 		commctrl.lib /subsystem:windowsce,5.02
 
-# Note that install needs to be run on the POSIX platform and the all
-# is only to make sure we build everything; it won't compile anything
-# because Visual-C is probably not installed on that platform.
+# Note that we don't need to create the install directories because
+# libgpg-error must have been build and installed prior to this
+# package.
 install: all
-	@echo fixme Install the files
+	copy /y libassuan-0-msc.dll $(bindir:/=\)
+	copy /y libassuan-0-msc.lib $(libdir:/=\)
+	copy /y assuan.h $(incdir:/=\)
