@@ -1,4 +1,4 @@
-2010-11-01  Marcus Brinkmann  <marcus.brinkmann@ruhr-uni-bochum.de>
+2010-11-01  Marcus Brinkmann  <marcus@g10code.de>
 
 	* configure.ac: Check for fcntl.h.
 
