@@ -1,3 +1,7 @@
+2010-11-02  Werner Koch  <wk@g10code.com>
+
+	* conf-w32ce-msc/build.mk: Change directory layout.
+
 2010-11-01  Werner Koch  <wk@g10code.com>
 
 	* conf-w32ce-msc/build.mk: New.
